--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean": "rm -f bcstring.js",
     "lint": "eslint lib/ test/ || exit 0",
     "test": "mocha --reporter spec test/*-test.js",
+    "test-ci": "istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec test/*.js",
     "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
@@ -30,15 +31,16 @@
     "nan": "~2.9.2"
   },
   "devDependencies": {
-    "babelify": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babelify": "^8.0.0",
     "browserify": "^16.1.1",
     "eslint": "^4.18.2",
+    "istanbul": "^0.4.5",
     "mocha": "^5.0.4",
-    "uglifyjs-webpack-plugin": "^1.2.3",
     "uglify-es": "^3.3.9",
+    "uglifyjs-webpack-plugin": "^1.2.3",
     "webpack": "^4.1.1"
   },
   "engines": {
